fixed styling error that caused flex wrapping

--- a/chessBoard.css
+++ b/chessBoard.css
@@ -8,7 +8,6 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  flex-wrap: wrap;
 }
 
 #whoseTurnIsIt {
@@ -60,6 +59,10 @@ body {
     width: 75px;
     height: 75px;
   }
+
+  #piece {
+    font-size: 3rem;
+  }
 }
 
 @media (max-width: 600px) {
@@ -71,6 +74,10 @@ body {
   #square {
     width: 40px;
     height: 40px;
+  }
+
+  #piece {
+    font-size: 2rem;
   }
 }
 
